# AdvantageKit

./: .bazeliskrc  .bazelrc  .clangd  .gitignore  .gitmodules  AdvantageKit.json  BUILD  CONTRIBUTING.MD  CONTRIBUTING.md  PRIVACY.md  README.md  RLOG-SPEC.md  WORKSPACE  WPILib-LICENSE.md  build.gradle.kts  compile_flags.txt  frcmaven_install.json  generate_library_deps.py  generate_sources.sh  library_deps.bzl  maven_install.json  peru.yaml  platform_mappings  publish_local.sh  publish_zip.py  rlog-spec.md  settings.gradle.kts
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yml  publish-docs.yml
akit/: AdvantageKit.json  build.gradle.kts  javadoc.css  native.gradle  publish.gradle  settings.gradle.kts
akit/autolog/: build.gradle.kts
build_tools/: README.md
build_tools/cc/: cc_superimport.bzl  platform_dynamic_library.bzl
build_tools/compdb/: WORKSPACE
build_tools/java/: jni_runfiles_bundle.bzl
build_tools/jni/: java_native_headers.bzl
build_tools/jpatch/: BUILD  java_patch.bzl
build_tools/repo/: BUILD  MavenZipPublisher.java  binary_zip_repo.BUILD  copy_filegroup.bzl  header_zip_repo.BUILD  java_export.bzl  javadoc.bzl  maven.bzl  maven_publish.bzl  maven_publish_pom.bzl  maven_publish_zip.bzl  pom_file.bzl  pom_generic.tpl  publish_zip.py  wpilib_nativezip_utils.bzl
build_tools/toolchain/: BUILD  athena_cc_toolchain.bzl  athena_toolchain_linux_x64_files.BUILD  athena_toolchain_macos_x64_files.BUILD  athena_toolchain_windows_x64_files.BUILD
build_tools/zip/: BUILD  versioned_zip_naming.bzl
conduit/: BUILD  README.md  conduit_schema.fbs
conduit/api/: BUILD  README.md
conduit/wpilibio/: BUILD  README.md
docs/: CNAME  CODE-STRUCTURE.md  COMMON-ISSUES.md  CONDUIT-SHIMS.md  DATA-FLOW.md  DEVELOPING.md  INSTALLATION.md  NEW-FOR-2023.md  RECORDING-INPUTS.md  RECORDING-OUTPUTS.md  RLOG-SPEC.md  START-DEVELOPING.md  START-LOGGING.md  STRUCTURE.md  SYSID.md  TYPES.md  VERSION-CONTROL.md  WHAT-IS-ADVANTAGEKIT.md  docusaurus.config.ts  package-lock.json  package.json
docs/docs/: developing.md  index.md  sysid-compatibility.md  whats-new.md
docs/resources/: data-flow.pages
docs/src/css/: custom.css
example_java_project/: BUILD
example_logs/: BUILD  README.md  noiselog.rlog  odometrylog.rlog  robotlog.rlog  robotlog_invalid.rlog  robotlog_simulated.rlog
example_projects/: BUILD
example_projects/template/: .gitignore
example_projects/wpilib_build_file/: BUILD  build.gradle  wpilib_build_file.bzl
example_sandbox/: BUILD  test.c
junction/: README.md
junction/autolog/: BUILD
junction/core/: BUILD  README.md
junction/shims/: README.md
p3p/opencv/: BUILD.bazel
template_projects/: build.gradle.kts  build_generated_projects.sh  generate_projects.sh
template_projects/kitbot_2024/: build.gradle
template_projects/spark_swerve/: build.gradle
template_projects/talonfx_swerve/: AdvantageScope Swerve Calibration.json
template_projects/template/: .gitignore  AdvantageKit-License.md  WPILib-License.md  build.gradle  settings.gradle
(+694 files in other folders)
